rando/static/css/style.less
/* ... */
.theme-tools
{
 float:left;
}

.pictogram {
  width: 25px;
  height: 25px;
  overflow: hidden;
  display: inline-block;

  img {
    max-width: none;
    height: 25px;
  }


  &.big {
    width: 64px;
    height: 64px;

    img {
      height: 64px;
    }
  }


  &.small {
    width: 16px;
    height: 16px;

    img {
      height: 16px;
    }
  }
}


/****************************************************************************
* 
* Maps
* 
*/

#mainmap {
  z-index: 890;
}

#mainmap .leaflet-popup-content-wrapper {
  .border-radius(0);
  background: #f6f7f0;
  min-width: 250px;

  .leaflet-popup-content {
    text-align: center;

    .description {
      text-align: justify;
    }

    p {
      margin: 10px 0;

      &:last-child {
        margin-bottom: 15px;
      }
    }

    p.popupdetail a {
      font-size: 14px;
      position: absolute;
      bottom: 30px;
      right: 15px;
    }

    img {
      max-width:100% !important;
      float: left;
      margin-right: 10px;
      opacity: 0.7;

      &:hover {
        opacity: 1.0;
      }
    }

    a {
      color: #5db9d6;
      text-decoration: underline;
    }
  }
}

#mainmap .leaflet-popup-tip {
  background: #f6f7f0;
}

.leaflet-popup-content {
  margin: 14px 16px;

  i {
    display: none;
  }
}

#mainmap .popup-footer
{
  background:url(../img/popup-footer.png) no-repeat center;
  width:100%;
  height:16px;
  margin-top:-1px;
}

.no-fullscreen .leaflet-control-zoom-fullscreen {
  display: none;
}

.leaflet-control-zoom-fullscreen {
  background-image: url(../img/icon-fullscreen.png);
}


/****************************************************************************
* 
* Detail and Flatpage
* 
*/


.detail-content, .flatpage-content {
   padding-bottom: 15px;
   color: @blackLighter;
}

.flatpage-content h2, .flatpage-content h3, .flatpage-content h4, 
.detail-content h2, .detail-content h3, .detail-content h4, {
 color: #494146;
}

.detail-content a, .flatpage-content a {
 color:#63c1db;
}

/****************************************************************************
* 
* Detail page
* 
*/

#detail-content-top {
  margin-bottom: 15px;

  h2 {
    margin-top: 15px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

#toolbox {
  margin-right: 15px;
  margin-bottom: 0;
  margin-top: 0;
  text-align: right;

  a.print,
  a.backpack,
  a.download {
    position: relative;
    padding-left: 30px;
    vertical-align: top;

    &.gpx {
      padding-left: 25px;
    }
    &.kml {
      padding-left: 25px;
    }
  }

  a.btn i {
    position: absolute;
    top: 0px;
    left: 0px;
    display: inline-block;
    height: 25px;
    width: 30px;

    background-repeat: no-repeat;

    &.gpx {
      background-image: url("../img/gpx.png");
      width: 25px;
    }

    &.kml {
      background-image: url("../img/kml.png");
      width: 25px;
    }

    &.view3d {
      background-image: url("../img/view3d.png");
    }

    &.print {
      background-image: url("../img/imprimante.png");
    }

    &.backpack {
      background-image: url("../img/sacplus.png");
    }
  }

  a.backpack,
  a.download,
  #btn-print {
    margin-top: 5px;
  }
}

html.no-webgl #toolbox a.view3d,
html.mobile #toolbox a.view3d {
  display: none;
}


#detail-content-top h2:first-letter, .flatpage-content h2:first-letter {
 font-size: 2em;
}

#detail-content-top h2, .flatpage-content h2 {
 font-size: 2em;
 color: @blackLighter;
 text-transform:uppercase;
}

.detail-content h3 {
 font-size: 14px;
 text-decoration: underline;
 margin-bottom: 10px;
 margin-top: 20px;
}

.detail-content h4 {
 background-color: #999095;
 text-align: center;
 color: white;
 width: 100%;
}

.detail-content p {
 text-align:justify;
}

.alert {
  h3 {
    margin: 0px;
  }

  &.alert-error h3 {
    color: #b94a48;  // bootstrap default color
  }

  &.alert-info h3 {
    color: #3a87ad;  // bootstrap default color
  }
}

#trek-advice h3 {
  background-image: url(../img/warning.png);
  background-repeat: no-repeat;
  padding-left: 35px;
}

#trek-access h3 {
  background-image: url(../img/road.png);
  background-repeat: no-repeat;
  padding-left: 35px;
}


p.teaser {
  line-height:1.1em;
  font-size: 18px;
  font-family: inherit;
  font-weight: bold;
  color: inherit;
  text-rendering: optimizelegibility;
}

.detail-content p.image {
 text-align: center;
}

#trek-identity {
  background-color: white;
  .box-shadow(0px 0px 15px 0px rgba(0, 0, 0, 0.3));
}

#trek-identity p {
 margin-bottom:0;
 color:#80747c;
}

#trek-identity span.value {
  color:#F77E00;
  font-style: italic;
}

#themes li, #usages li, #networks li {
  list-style-type: none;
  display: inline-block;
}

#themes .pictogram, #usages .pictogram {
  opacity: 0.5;
}

#detailmap {
  min-height: 400px;

  &:-webkit-full-screen { top: 0; left: 0; width: 100%; height: 100%; }
  &:-moz-full-screen { top: 0; left: 0; width: 100%; height: 100%; }
  &:full-screen { top: 0; left: 0; width: 100%; height: 100%; }

  .helpclic {
    color: @white;
    z-index: 5;
    bottom: 0px;
    position: absolute;
    background-color: rgba(0,0,0,0.5);
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    font-size: 14px;
  }
}

.meta {
  margin-top: 15px;
}

#pois-accordion .pictures-info {
 margin-right: 35px;
 margin-top: 7px;
}

#detailmap a, #toolbox a {
 color: black;
}

#park-center-warning {
  
  background-image: url(../img/pn-logo.png);
  background-repeat: no-repeat;
  background-position-x: 5px;
  background-position-y: 50%;
  padding-left: 45px;

  &.alert-info a {
   font-weight: bold;
   color: #3a87ad;
   text-decoration: underline;
  }

  &.alert-info p {
   margin: 0;
  }
}



#altitudegraph {
  color: @orange;
  font-size: 10px;

  p {
    margin: 0px;
  }

  .axislabel {
    display:inline-block;
  }

  #altitude-details {
    margin-left: 20px;
    display:inline-block;
    font-weight: bold;
  }

  #mouseoverprofil {
    display: inline-block;
    color: @blackLighter;
  }
}
/* ... */

